--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "start": "yarn ts-node src/Bot.ts"
+    "start": "yarn ts-node src/Bot.ts",
+    "lint": "yarn eslint --ignore-path .gitignore --ext .js,.ts . --fix",
+    "format": "yarn prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json|md|json)\""
   }
 }
