--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,9 @@
     "removeComments": true,
     "typeRoots": ["node_modules/@types"],
     "sourceMap": false,
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "allowJs": true
   },
-  "files": ["src/Bot.ts"],
   "include": ["./**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
