--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "<matthieu@blanknetwork.com>",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.7.1"
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
